--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1133,4 +1133,15 @@ h5, .h5 {
   display: inline-block;
 }
 
+.button-border-yellow {
+  border-color: #f8c102;
+}
+
+.button-border-blue {
+  border-color: #0092af;
+}
+
+.button-border-grey {
+  border-color: #494949;
+}
 
