--- a/app/views/brand_payments/brand_payment.html.erb
+++ b/app/views/brand_payments/brand_payment.html.erb
@@ -4,7 +4,7 @@
 
 <div class="payment-div ">
   <div class="payment-button-set">
-    <%= link_to 'DOWNLOAD INVOICE', '#', :class => 'btn btn-download', id: 'export_payments' %>
+    <%= link_to 'DOWNLOAD INVOICE', '#', :class => 'btn btn-download button-border-yellow', id: 'export_payments' %>
   </div>
 </div>
 
