--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -4,7 +4,7 @@
 
 <div class="payment-div ">
   <div class="payment-button-set pull-right">
-    <%= link_to 'EXPORT', '#', :class => 'btn btn-export', id: 'export_campaigns' %>
+    <%= link_to 'EXPORT', '#', :class => 'btn btn-export button-border-yellow', id: 'export_campaigns' %>
 
     <div class="dropdown" id="age_button">
       <button class="btn btn-age dropdown-toggle" type="button" data-toggle="dropdown">Age
