--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -26,7 +26,7 @@
 
           <div class="col-lg-7 col-md-6 col-sm-6 col-xs-12">
             <div class="btn-box pull-right">
-              <%= link_to 'Send Request', new_campaign_path(receiver_id: influencer.id), class: 'btn btn-message', data: {href: new_campaign_path(receiver_id: influencer.id)} %>
+              <%= link_to 'Send Request', new_campaign_path(receiver_id: influencer.id), class: 'btn btn-message button-border-yellow', data: {href: new_campaign_path(receiver_id: influencer.id)} %>
             </div>
             <div class="follower-box pull-right">
               <span class="follower-number"><%= influencer.max_followers %></span>
