--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -29,7 +29,7 @@
 
                     <br/>
 
-                    <input class="btn btn-primary" type="submit" value="CONNECT"/>
+                    <input class="btn btn-primary button-border-blue" type="submit" value="CONNECT"/>
                 </form>
             </div>
 
