--- a/app/views/profile/contact_us.html.erb
+++ b/app/views/profile/contact_us.html.erb
@@ -23,7 +23,7 @@
 
         <div class="get-in-touch-submit">
           <div class="form-group">
-            <%= f.button 'SUBMIT', class: 'btn get-in-touch-submit-button' %>
+            <%= f.button 'SUBMIT', class: 'btn get-in-touch-submit-button button-border-yellow' %>
           </div>
         </div>
     <% end %>
