--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -122,7 +122,7 @@
       <% if @user.influencer? %>
           <h4 class="social-account">SOCIAL ACCOUNTS AND PRICING</h4>
 
-          <button type="button" class="btn btn-account" data-trigger="modal" data-target="AddFacebookAccount" href="javascript:" data-dismiss="modal">MANAGE ACCOUNT</button>
+          <button type="button" class="btn btn-account button-border-yellow" data-trigger="modal" data-target="AddFacebookAccount" href="javascript:" data-dismiss="modal">MANAGE ACCOUNT</button>
 
           <%= render partial: 'shared/add_account_modal' %>
 
@@ -133,6 +133,6 @@
 
       <%#= render partial: 'shared/profile_image_upload', locals: { user: current_user } %>
       </div>
-      <%= f.button 'UPDATE', class: 'btn btn-update' %>
+      <%= f.button 'UPDATE', class: 'btn btn-update button-border-yellow' %>
   <% end %>
 
