--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1134,14 +1134,17 @@ h5, .h5 {
 }
 
 .button-border-yellow {
+  color: white;
   border-color: #f8c102;
 }
 
 .button-border-blue {
+  color: white;
   border-color: #0092af;
 }
 
 .button-border-grey {
+  color: white;
   border-color: #494949;
 }
 
