--- a/app/views/profile/show_settings.html.erb
+++ b/app/views/profile/show_settings.html.erb
@@ -63,5 +63,5 @@
         </div>
 
         </div>
-        <%= f.button 'SAVE', class: 'btn btn-default btn-save button-border-yellow' %>
+        <%= f.button 'SAVE', class: 'btn btn-save button-border-yellow' %>
     <% end %>
