[Bug Fixed]:  Yellow Color change of border

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1135,7 +1135,7 @@ h5, .h5 {
 
 .button-border-yellow {
   color: white;
-  border-color: #f8c102;
+  border-color: #f1b242;
 }
 
 .button-border-blue {
