[Bug Fixed]:  Contact Us Submit button color change on hover

--- a/app/assets/stylesheets/contact-us.css
+++ b/app/assets/stylesheets/contact-us.css
@@ -62,6 +62,11 @@
     font-size: 13px;
 }
 
+.get-in-touch-submit-button:hover {
+    color: white;
+    background-color: #f1b242 ;
+}
+
 .display-inline {
     display: inline-block;
 }
