[Bug Fixed]: Get In Touch Validation Added

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1153,3 +1153,11 @@ h5, .h5 {
   border-color: #494949;
 }
 
+.contact-us li {
+  padding-top: 3px;
+  font-size: 100%;
+}
+
+.contact-us .form-control:focus {
+  border-color: #f4503b !important;
+}
