--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -103,11 +103,11 @@
       <div class="col-md-7 col-sm-8 col-xs-12">
         <div class="text-top helvetica-neue-light"> Get in touch!</div>
 
-        <%= form_tag get_in_touch_public_index_path do %>
+        <%= form_tag get_in_touch_public_index_path, data: { parsley_validate: '' } do %>
             <div class="row">
               <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="form-group">
-                  <input type="text" class="form-control" name="full_name" placeholder="Full Name"/>
+                  <input type="text" class="form-control" name="full_name" placeholder="Full Name" data-parsley-required="true"/>
                 </div>
               </div>
             </div>
@@ -115,13 +115,13 @@
             <div class="row">
               <div class="col-md-6 col-sm-6 col-xs-12 clear-padding-margin">
                 <div class="form-group">
-                  <input type="email" class="form-control" name="email" placeholder="Email"/>
+                  <input type="email" class="form-control" name="email" placeholder="Email" data-parsley-type="email" data-parsley-required="true"/>
                 </div>
               </div>
 
               <div class="col-md-6 col-sm-6 col-xs-12 clear-padding-margin only-right-padding">
                 <div class="form-group">
-                  <input type="tel" pattern='(^[\+]?[0-9]+[-]?[0-9]+[-]?[0-9]+$)' class="form-control" name="phone_number" placeholder="Phone Number"/>
+                  <input type="text" data-parsley-pattern="(^[\+]?[0-9]+[-]?[0-9]+[-]?[0-9]+$)" data-parsley-required="true" class="form-control" name="phone_number" placeholder="Phone Number"/>
                 </div>
               </div>
             </div>
@@ -129,7 +129,7 @@
             <div class="row">
               <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="form-group">
-                  <textarea class="form-control" name="message" placeholder="Message" rows="6"></textarea>
+                  <textarea class="form-control" name="message" placeholder="Message" rows="6" data-parsley-required="true"></textarea>
                 </div>
               </div>
             </div>
