--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -293,4 +293,53 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcfff4', endColorstr='#b3bead', GradientType=0);
 }
 
+@media (max-width: 480px) {
+    .offer-header div {
+        display: block;
+    }
+
+    .offer-time {
+        float: none;
+    }
+
+    #inbox, #stared_inbox {
+        border: 1px solid #ddd;
+        margin-bottom: 20px;
+    }
+
+    .panel-offers #inbox .offer-header div, .panel-offers #stared_inbox .offer-header div {
+
+        border-top: 1px solid #ddd;
+        width: 100%;
+        padding-left: 5px;
+        text-align: center;
+    }
+
+    .offer-text {
+        margin: 0;
+    }
+
+    .select-offer {
+        padding-right: 0;
+    }
+
+    .offer-body {
+        border-top: 1px solid #ddd;
+        padding-left: 5px;
+
+    }
+
+    .comment-box {
+        margin-top: 10px;
+    }
+
+    .comment-box .btn-accept {
+        padding-left: 8px;
+        margin-left: 0;
+    }
+
+    /* todo If Sanmalireddy wants header name then add this line */
+    /*.panel-offers #inbox .offer-header div:nth-of-type(3):before { content: "Campaign Name : "; font-weight: bold; }*/
+
+}
 
