--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1153,9 +1153,10 @@ h5, .h5 {
   border-color: #494949;
 }
 
-.contact-us li {
+.contact-form li {
   padding-top: 3px;
   font-size: 100%;
+  color: white;
 }
 
 .contact-us .form-control:focus {
