profile image crop functionality

--- a/app/views/shared/_profile_image_upload.html.erb
+++ b/app/views/shared/_profile_image_upload.html.erb
@@ -1,4 +1,10 @@
 <%= stylesheet_link_tag 'profile-image-upload', media: 'all' %>
+<style>
+  #profile_image_upload_modal .modal-dialog{
+      width: 90%;
+      height: auto;
+  }
+</style>
 <div id="profile_image_upload_modal" class="modal fade">
   <div class="modal-dialog">
     <div class="modal-content profile-image-modal-content">
