profile picture image crop on profile pic

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -158,6 +158,7 @@
     </section>
 
     <%= render partial: 'shared/profile_image_upload', locals: { user: current_user } %>
+    <%= render partial: 'shared/profile_image_crop', locals: { user: current_user }%>
   </aside>
 
   <div class="content-wrapper">
